tests/sksl/errors/BadFieldName.sksl
struct S {};

void main() { S s; s.missing = 123; }
